--- a/index.html
+++ b/index.html
@@ -8,19 +8,22 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merienda&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   </head>
   <body>
+
     <div class="top">
+      <h4 class="fix">A website about me :)</h4>
       <img class="cloud-1" src="images/cloud.png" alt="cloud-img">
         <h1>I'm Sarthak</h1>
-        <p>a student</p>
+        <h2>a student</h2>
       <img class = "cloud-2" src="images/cloud.png" alt="cloud-img">
       <img src="images/mountain.png" alt="mountain-img">
     </div>
     <div class="middle-container">
       <div class="profile">
         <img src="" alt="">
-        <h2>Hello.</h2>
+        <h2>Hello!</h2>
         <p>I am Sarthak Saumya.
           <br />
           I am a CSE Sophomore at Indian Institute of Technology (Indian School of Sciences), Dhanbad.</p>
@@ -29,28 +32,49 @@
       <div class="skills">
         <h2>Education.</h2>
         <img src="images/degree.png" alt="degree" />
-          <h3>Indian Institute of Technology (ISM), Dhanbad — Bachelor of Technology in Computer Science &  Engineering</h3>
-          <p>2021-2025</p>
-          <h3>Delhi Public School,Bhagalpur</h3>
+          <h3>Indian Institute of Technology (ISM), Dhanbad</h3>
+          <h4>Bachelor of Technology<br />Computer Science &  Engineering</h4>
+          <p>2021-2025 Current CGPA: 9.03</p>
+          <hr class="check" />
+          <h3>Delhi Public School<br />Bhagalpur</h3>
           <p>
-            12th- April 2021<br />
-            10th- April 2019
+            12th- April 2021 - 98.50% (CBSE)<br />
+            10th- April 2019 - 97.60% (CBSE)
           </p>
       </div>
       <hr>
-      <div class="contact-me">
-        <h2>Get In Touch</h2>
-
-        <a class="btn" href="mailto:sarthaksaumya13@gmail.com">CONTACT ME</a>
+      <div class="acievements">
+        <h2>Achievements</h2>
+        <img src="images/trophy.png" alt="trophy" />
+        <p>
+          Selected for National Talent Search Examination Scholarship.<br />
+          Conducted by the N.C.E.R.T. under Government of India for identifying meritorious students at high school level.
+        </p>
+        <hr class="check" />
+        <p>
+          Selelcted for Kishore Vyagyanik Protsahan Yojana (KVPY) Fellowship.<br />
+          Conducted by IISc, Bangalore to identify best scientific talent across the nation at 10+2 level.
+        </p>
+        <hr class="check" />
+        <p>
+          Felicitated as one of S.M.T.E. Achiever. <br />
+          Conducted by the DPS Society to identify meritorious students at high school level.
+        </p>
       </div>
+      <hr />
     </div>
 
 
     <div class="bottom-container">
+      <h2>Get In Touch</h2>
+      <a class="btn" href="mailto:sarthaksaumya13@gmail.com">CONTACT ME</a>
+      <br />
       <a class="footer-link" href="https://www.linkedin.com/in/sarthak-saumya-b6b581227/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/saumya_sarthak">Twitter</a>
       <p>© Sarthak Saumya.</p>
       <a href="https://www.flaticon.com/free-icons/degree" title="degree icons">Degree icons created by Smashicons - Flaticon</a>
+      <br />
+      <a href="https://www.flaticon.com/free-icons/trophy" title="trophy icons">Trophy icons created by Freepik - Flaticon</a>
     </div>
 
   </body>
