--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h2>Hello!</h2>
         <p>I am Sarthak Saumya.
           <br />
-          I am a CSE Sophomore at Indian Institute of Technology (Indian School of Sciences), Dhanbad.</p>
+          I am a CSE Sophomore at Indian Institute of Technology (Indian School of Mines), Dhanbad.</p>
       </div>
       <hr>
       <div class="skills">
